<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="carInfo"
            type="sonic.star.carfax.data.model.CarListing" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/detail_fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/app_name" />

        </com.google.android.material.appbar.AppBarLayout>

        <ProgressBar
            android:id="@+id/progress_loacing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/margin_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="@dimen/vertical_guide" />

                <ImageView
                    android:id="@+id/car_image"
                    bind:imageUrl="@{carInfo.image}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    android:contentDescription="@string/car_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/guideline_horizontal" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/car_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@{carInfo.getMake}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_20"
                    app:layout_constraintStart_toStartOf="@+id/car_image"
                    app:layout_constraintTop_toBottomOf="@+id/car_image"
                    tools:text="2016 NISSAN ALTIMA 2.5 SV PREMIMUM" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/car_price_mileage"
                    android:text="@{carInfo.getPriceMileage}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:fontFamily="@font/rubik_bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_24"
                    app:layout_constraintStart_toStartOf="@+id/car_name"
                    app:layout_constraintTop_toBottomOf="@+id/car_name"
                    tools:text="$ 144444 | 333333 mi" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider"
                    android:layout_margin="@dimen/margin_16"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="@+id/car_price_mileage"
                    app:layout_constraintStart_toStartOf="@+id/car_price_mileage"
                    app:layout_constraintTop_toBottomOf="@+id/car_price_mileage" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/vehicle_info"
                    style="@style/detail_fragment_textview"
                    android:layout_marginStart="@dimen/margin_16"
                    android:text="@string/vehicle_info"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/divider"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/car_location"
                    style="@style/detail_fragemnt_subtext"
                    android:text="@string/location"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="@+id/vehicle_info"
                    app:layout_constraintTop_toBottomOf="@+id/vehicle_info" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/car_exterior_color"
                    style="@style/detail_fragemnt_subtext"
                    android:text="@string/exterior_color"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_16"
                    app:layout_constraintStart_toStartOf="@+id/car_location"
                    app:layout_constraintTop_toBottomOf="@+id/car_location" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/car_interior_color"
                    style="@style/detail_fragemnt_subtext"
                    android:text="@string/interior_color"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="@+id/car_exterior_color"
                    app:layout_constraintTop_toBottomOf="@+id/car_exterior_color" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/car_drive_type"
                    style="@style/detail_fragemnt_subtext"
                    android:text="@string/drive_type"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="@+id/car_interior_color"
                    app:layout_constraintTop_toBottomOf="@+id/car_interior_color" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/car_transmission"
                    style="@style/detail_fragemnt_subtext"
                    android:text="@string/transmission"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="@+id/car_drive_type"
                    app:layout_constraintTop_toBottomOf="@+id/car_drive_type" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/car_body_style"
                    style="@style/detail_fragemnt_subtext"
                    android:text="@string/body_style"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="@+id/car_transmission"
                    app:layout_constraintTop_toBottomOf="@+id/car_transmission" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/car_engine"
                    style="@style/detail_fragemnt_subtext"
                    android:text="@string/engine"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="@+id/car_body_style"
                    app:layout_constraintTop_toBottomOf="@+id/car_body_style" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/car_fuel"
                    style="@style/detail_fragemnt_subtext"
                    android:layout_marginBottom="@dimen/margin_24"
                    android:text="@string/fuel"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="@+id/car_engine"
                    app:layout_constraintTop_toBottomOf="@+id/car_engine" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/horizontal_guide" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/car_location_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik"
                    android:text="@{carInfo.location}"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@id/car_location" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/car_exterior_color_info"
                    style="@style/detail_fragemnt_subtext"
                    android:text="@{carInfo.exteriorColor}"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/car_location_info"
                    app:layout_constraintTop_toBottomOf="@+id/car_location_info" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/car_interior_color_info"
                    style="@style/detail_fragemnt_subtext"
                    android:text="@{carInfo.interiorColor}"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/car_exterior_color_info"
                    app:layout_constraintTop_toBottomOf="@+id/car_exterior_color_info" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/car_drive_type_info"
                    style="@style/detail_fragemnt_subtext"
                    android:text="@{carInfo.driveType}"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/car_interior_color_info"
                    app:layout_constraintTop_toBottomOf="@+id/car_interior_color_info" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/car_transmission_info"
                    style="@style/detail_fragemnt_subtext"
                    android:text="@{carInfo.transmission}"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/car_drive_type_info"
                    app:layout_constraintTop_toBottomOf="@+id/car_drive_type_info" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/car_body_style_info"
                    style="@style/detail_fragemnt_subtext"
                    android:text="@{carInfo.bodyStyle}"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/car_transmission_info"
                    app:layout_constraintTop_toBottomOf="@+id/car_transmission_info" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/car_engine_info"
                    style="@style/detail_fragemnt_subtext"
                    android:text="@{carInfo.engine}"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/car_body_style_info"
                    app:layout_constraintTop_toBottomOf="@+id/car_body_style_info" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/car_fuel_info"
                    style="@style/detail_fragemnt_subtext"
                    android:text="@{carInfo.fuel}"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/car_engine_info"
                    app:layout_constraintTop_toBottomOf="@+id/car_engine_info" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/car_dealer_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/call_dealer"
                    android:textSize="@dimen/text_14"
                    app:layout_constraintEnd_toEndOf="@+id/car_fuel"
                    app:layout_constraintStart_toStartOf="@+id/car_fuel"
                    app:layout_constraintTop_toBottomOf="@+id/car_fuel" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>